--- a/index.html
+++ b/index.html
@@ -316,28 +316,27 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                      class="teal-text hoverline">Westlake Pipe and Fittings</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Full Stack Software Engineer</div>
             <ul>
               <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
+                Developed an in-house employee SOP training system using Python, Django, MySQL, HTML/CSS, and AJAX
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+                Redesigned and reimplimented MySQL databases, improving lookup speeds by 75%.
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
+              <li>Conducted on-site user testing to test the viability of our product.</li>
+              <li>Collaborated in an agile-based team environment.</li>
               <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> Python, Django, MySQL
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>Jan 2023 - Aug 2023 | Toronto, Canada</span>
           </div>
         </div>
 
