--- a/index.html
+++ b/index.html
@@ -512,12 +512,6 @@
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
-              </div>
             </div>
           </div>
         </div>
@@ -531,19 +525,7 @@
                 <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
-              </div>
-              <div class="col s4 m2">
                 <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
               </div>
             </div>
           </div>
@@ -558,12 +540,6 @@
 
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
               </div>
             </div>
           </div>
@@ -616,41 +592,11 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
-                </p>
-                <p class="brown-text">Tempe, USA</p>
-                <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
-                  <br>
-                  <b>CGPA: </b>4.0/4.0
-                </p>
-
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
-                  </ul>
-                  </p>
-
-                </ul>
-              </div>
-            </div>
-
-            
-          </div>
-          <div class="col s12 m6 l6">
-            <div class="card">
-              <div class="card-content">
-                <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">University of Toronto</a></span>
                 </p>
                 <p class="brown-text">Ahmedabad, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Applied Science and Computer Engineering
                   <br>
                   <b>CGPA: </b>3.13/4.33
                 </p>
@@ -680,15 +626,10 @@
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Agrim" data-position="top" data-tooltip="Call Agrim"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Agrim">+14805722456</a></a>
-        </p>
-        <p>
-          <a aria-label="Email Agrim" href="mailto:vSharma@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Agrim" href="mailto:agrim.sharma@mail.utoronto.ca" target="_blank" data-position="top"
             data-tooltip="Email Agrim" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Agrim" href="mailto:vSharma@gmail.com"
-              class="hoverline">vSharma@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Agrim" href="mailto:agrim.sharma@mail.utoronto.ca"
+              class="hoverline">agrim.sharma@mail.utoronto.ca</a></a>
         </p>
         <p>
           <a aria-label="View Agrim on GitHub" href="http://github.com/agrimshar" target="_blank"
