--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                 <p>
                   <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">University of Toronto</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Toronto, Canada</p>
                 <p>
                   <b>Degree: </b>Bachelor of Applied Science and Computer Engineering
                   <br>
