--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Places Travelled section" href="#travel" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
+      </li>
     </ul>
   </nav>
 
@@ -645,6 +649,14 @@
               class="fa fa-linkedin"></i><a aria-label="Agrim on LinkedIn" href="http://linkedin.com/in/agrimshar"
               class="hoverline" target="_blank">linkedin.com/in/agrimshar</a></a>
         </p>
+      </div>
+    </section>
+
+    <!-- Nine Section: Travel -->
+    <section id="travel" class="section scrollspy full-height">
+      <h3 class="page-title white-text teal">Places Travelled</h3>
+      <div class="container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.2099651349513!2d-79.39355846089143!3d43.66460289277538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b34ba1caf84df%3A0x945aa043a7318b98!2sQueen&#39;s%20Park%2C%20110%20Wellesley%20St%20W%2C%20Toronto%2C%20ON%20M7A%201A2!5e0!3m2!1sen!2sca!4v1726852137550!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
