--- a/index.html
+++ b/index.html
@@ -352,8 +352,9 @@
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
         <div class="row">
-          <div class="sort-list">
-            <div class="col s12 m6 l4 sort-item" data-event-date="August 21 2020">
+          <ul class="sort-list">
+            <li class="sort-item" data-event-date="August 21 2020">
+            <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
@@ -389,6 +390,7 @@
               </div>
             </div>
           </div>
+            </li>
 
           <!-- 1. Django Project -->
           <!-- <div class="col s12 m6 l6">
@@ -428,7 +430,8 @@
           </div> -->
 
           <!-- Flask Project -->
-          <div class="col s12 m6 l4 sort-item" data-event-date="August 21 2021">
+            <li class="sort-item" data-event-date="August 21 2021">
+          <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
@@ -466,7 +469,8 @@
               </div>
             </div>
           </div>
-          </div>
+            </li>
+          </ul>
 
           
 
