--- a/index.html
+++ b/index.html
@@ -367,8 +367,6 @@
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
         <div class="row getme">
-          <ul class="sort-list">
-            <li class="sort-item" data-event-date="August 21 2020">
             <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -405,7 +403,6 @@
               </div>
             </div>
           </div>
-            </li>
 
           <!-- 1. Django Project -->
           <!-- <div class="col s12 m6 l6">
@@ -444,8 +441,7 @@
             </div>
           </div> -->
 
-          <!-- Flask Project -->
-            <li class="sort-item" data-event-date="August 21 2021">
+          <!-- Flask Project -->>
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -484,8 +480,6 @@
               </div>
             </div>
           </div>
-            </li>
-          </ul>
 
           
 
