--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
     <section id="projects" class="section scrollspy">
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
-        <div class="row getme">
-            <div class="col s12 m6 l4" >
+        <div class="row" id="getme">
+            <div class="col s12 m6 l4 time" datetime="2002-02-01">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
@@ -442,7 +442,7 @@
           </div> -->
 
           <!-- Flask Project -->>
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l4 time" datetime="2004-02-01">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
@@ -450,6 +450,45 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Blog Web-App<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  A simple and extensible blog web-app based on HTML/CSS, and Django
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title teal-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> HTML, CSS, Bootstrap, Python,Django</li>
+                  <li>Users can view posts and contact the admin via Contact Page.</li>
+                  <li>Admin can Add, Delete, Update posts.</li>
+
+
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit Blog website" href="#" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/agrimshar/blog"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l4 time" datetime="1990-02-01">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">TEST Blog Web-App<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A simple and extensible blog web-app based on HTML/CSS, and Django
