--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
     
 
     var but = document.getElementById("load-more");
-    var divs = document.querySelectorAll('.getme > div');
+    var divs = document.querySelectorAll('#getme > div');
     var insert = document.getElementById("insert");
 
     insert.appendChild(divs[0].cloneNode(true));
